ACMS-480: Fix white space to the left of the dropdown button. (#561)

--- a/themes/acquia_claro/scss/01-base/_base-modifiers.scss
+++ b/themes/acquia_claro/scss/01-base/_base-modifiers.scss
@@ -26,4 +26,8 @@ ul {
       background: $gray-300;
     }
   }
+
+  &.dropbutton {
+    padding-left: 0;
+  }
 }
